# fondaco

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  IMPLEMENTATION_PLAN.md  LAUNCH_DRAFTS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  STATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/ui/: README.md
api/ui/templates/: audit.html  base.html  index.html  plan.html
boundary/: __init__.py  audit.py  guards.py  plan_schema.json  policy.py  validator.py
demo/: scenarios.md
demo/dataset/: README.md
demo/dataset/init/: 01_schema.sql  02_data.sql  03_readonly_role.sql
design/: adapter-contract.md  label-model.md  plan-dsl.md  threat-model.md
executor/: __init__.py  runner.py
executor/adapters/: __init__.py  contract.py  postgres.py
planner/: __init__.py  client.py  demo.py
planner/prompts/: CHANGELOG.md  v1.md  v2.md  v3.md
tests/adversarial/: conftest.py  test_binary_search_attack.py  test_boundary_attacks.py  test_comma_join_live.py
tests/integration/: conftest.py  test_api_loop.py  test_canary.py  test_canary_live.py  test_demo_scenarios.py  test_end_to_end_plan.py  test_postgres_adapter.py  test_readonly_role.py  test_scenarios_llm.py
tests/unit/: conftest.py  test_api.py  test_audit.py  test_demo_planner.py  test_guards.py  test_health.py  test_planner.py  test_policy.py  test_runner.py  test_validator_hostile.py
