# License: placeholder — headers finalized in Phase 8 (see DECISIONS.md).
[project]
name = "fondaco"
version = "0.0.1"
description = "Data boundary for AI over enterprise data. Data stays home. Plans cross."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "boundary", "planner", "executor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]  # S = bandit rules: boundary code is security code

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are the point of tests

[tool.pytest.ini_options]
testpaths = ["tests"]
